--- a/webpacktest/app/myapp.css
+++ b/webpacktest/app/myapp.css
@@ -1,4 +1,4 @@
 .Myappimg {
-  //background-color: #EEE;
-  background-image: url('a.jpg');
+  background-color: #EEE;
+  //background-image: url('a.jpg');
 }
